// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateListModal component tests matches snapshot 1`] = `
<Header>
  <Row
    justify="space-between"
  >
    <Col>
      <ForwardRef(Text)>
        THE MOVIE DB
      </ForwardRef(Text)>
    </Col>
    <Col>
      <Dropdown
        menu={
          {
            "items": [
              {
                "key": "item-1",
                "label": <Link
                  to="/"
                >
                  Dashboard
                </Link>,
              },
              {
                "key": "item-2",
                "type": "divider",
              },
              {
                "key": "item-3",
                "label": <Link
                  to="/lists"
                >
                  My Lists
                </Link>,
              },
              {
                "key": "item-4",
                "label": <Link
                  to="/watchlist"
                >
                  Watchlist
                </Link>,
              },
              {
                "key": "item-5",
                "label": <Link
                  to="/favorites"
                >
                  Favorites
                </Link>,
              },
              {
                "key": "item-6",
                "type": "divider",
              },
              {
                "key": "item-7",
                "label": "Logout",
                "onClick": [MockFunction],
              },
            ],
          }
        }
      >
        <ForwardRef(Text)>
          <Avatar
            src="https://www.gravatar.com/avatar/test/avatar"
          />
           
          <span
            className="hide-sm-down"
          >
            test/username
          </span>
           
          <ForwardRef(CaretDownOutlined) />
        </ForwardRef(Text)>
      </Dropdown>
    </Col>
  </Row>
</Header>
`;

exports[`CreateListModal component tests matches snapshot with empty account 1`] = `
<Header>
  <Row
    justify="space-between"
  >
    <Col>
      <ForwardRef(Text)>
        THE MOVIE DB
      </ForwardRef(Text)>
    </Col>
    <Col>
      <Dropdown
        menu={
          {
            "items": [
              {
                "key": "item-1",
                "label": <Link
                  to="/"
                >
                  Dashboard
                </Link>,
              },
              {
                "key": "item-2",
                "type": "divider",
              },
              {
                "key": "item-3",
                "label": <Link
                  to="/lists"
                >
                  My Lists
                </Link>,
              },
              {
                "key": "item-4",
                "label": <Link
                  to="/watchlist"
                >
                  Watchlist
                </Link>,
              },
              {
                "key": "item-5",
                "label": <Link
                  to="/favorites"
                >
                  Favorites
                </Link>,
              },
              {
                "key": "item-6",
                "type": "divider",
              },
              {
                "key": "item-7",
                "label": "Logout",
                "onClick": [MockFunction],
              },
            ],
          }
        }
      >
        <ForwardRef(Text)>
          <Avatar
            icon={<ForwardRef(UserOutlined) />}
          />
           
          <span
            className="hide-sm-down"
          >
            Username
          </span>
           
          <ForwardRef(CaretDownOutlined) />
        </ForwardRef(Text)>
      </Dropdown>
    </Col>
  </Row>
</Header>
`;
